--- a/Khoe/HttpServer/HttpServer/resources/web/mainPage.html
+++ b/Khoe/HttpServer/HttpServer/resources/web/mainPage.html
@@ -358,7 +358,7 @@
                                                 <tr width='100%'>
                                                    <td align='left'>
                                                       <label class="switch">
-                                                         <input type="checkbox" onclick='if(this.checked) startTimerGetLocation(); else clearTimerGetLocation();' checked=false>
+                                                         <input type="checkbox" onclick='if(this.checked) startTimerGetLocation(); else clearTimerGetLocation();' checked='0'/>
                                                          <div class="slider"></div>
                                                       </label>
                                                    </td>
